--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -35,6 +36,9 @@
             </button>
             <button class="btn" id="increment" onclick="increment()">
                 Add 1 :
+            </button>
+            <button class="reset btn" onclick="reset()">
+                Reset
             </button>
         </div>
 
