added dark theme, github logo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <header>
         <h1 class="title">Binary Calculator</h1>
+
+        <a href="https://github.com/tomsarry">
+            <img src="assets/github.svg" alt="github logo" class="logo">
+        </a>
     </header>
 
     <main>
@@ -32,10 +36,10 @@
 
         <div class="controls">
             <button class="btn" id="decrement" onclick="decrement()">
-                Remove 1 :
+                Remove 1
             </button>
             <button class="btn" id="increment" onclick="increment()">
-                Add 1 :
+                Add 1
             </button>
             <button class="reset btn" onclick="reset()">
                 Reset
